--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/JoaoASouza/t800/issues"
   },
-  "homepage": "https://github.com/JoaoASouza/t800#readme"
+  "homepage": "https://github.com/JoaoASouza/t800#readme",
+  "dependencies": {
+    "cron": "^1.8.2",
+    "discord.js": "^13.3.0"
+  }
 }
