--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/JoaoASouza/t800#readme",
   "dependencies": {
     "cron": "^1.8.2",
-    "discord.js": "^13.3.0"
+    "discord.js": "^13.3.0",
+    "dotenv": "^10.0.0"
   }
 }
