--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "cron": "^1.8.2",
     "discord.js": "^13.3.0",
     "dotenv": "^10.0.0"
+  },
+  "engines": {
+    "npm": "8.1.0",
+    "node": "16.13.0"
   }
 }
