--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
   },
   "homepage": "https://github.com/JoaoASouza/t800#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
     "cron": "^1.8.2",
-    "discord.js": "^13.3.0",
+    "discord.js": "^14.7.1",
+    "distube": "^4.0.4",
     "dotenv": "^10.0.0",
-    "node-fetch": "^3.0.0"
+    "googleapis": "^112.0.0",
+    "node-fetch": "^3.0.0",
+    "node-opus": "^0.3.3",
+    "opusscript": "^0.0.8",
+    "sodium": "^3.0.2"
   },
   "engines": {
-    "npm": "8.1.0",
+    "npm": "9.4.1",
     "node": "16.13.0"
   }
 }
